<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/ivMainBackground"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:foreground="@drawable/background_splash_gradient"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ivGradient"
        android:src="@drawable/background_splash_gradient"/>


    <TextView
        android:id="@+id/title_welcome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome" />

    <android.widget.Button
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="32dp"
        android:id="@+id/button_collectors"
        app:layout_constraintTop_toBottomOf="@+id/title_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/main_button_background"
        style="@style/MainButtonStyle"
        android:text="@string/button_collectors"/>

    <android.widget.Button
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="24dp"
        android:id="@+id/button_visitors"
        app:layout_constraintTop_toBottomOf="@+id/button_collectors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/sec_button_background"
        style="@style/MainButtonStyle"
        android:text="@string/button_visitors"/>


</androidx.constraintlayout.widget.ConstraintLayout>