<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.albums.AlbumInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_genre_label"
        android:textColor="@color/gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/album_info_genre"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:letterSpacing="0.02"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textFontWeight="600"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/album_releasedate_label"
        android:textColor="@color/gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/album_info_releasedate"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:letterSpacing="0.02"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textFontWeight="600"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/album_record_label"
        android:textColor="@color/gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/album_info_record"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:letterSpacing="0.02"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textFontWeight="600"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/album_artists_label"
        android:textColor="@color/gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/album_info_artist"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:letterSpacing="0.02"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textFontWeight="600"
        android:textSize="12sp" />

</LinearLayout>