<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".ui.albums.AlbumListFragment">

    <SearchView
        android:animateLayoutChanges="true"
        android:iconifiedByDefault="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/search_bar"
        android:focusable="false"
        android:queryHint="@string/album_searchbar_hint"
        android:background="@drawable/searchbar_background"
        android:queryBackground="@android:color/transparent"
        style="@style/CustomSearchViewStyle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="12dp"
        android:id="@+id/recycler_albums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_album_button"
        android:contentDescription="@string/fabAddAlbum"
        app:fabCustomSize="52dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="0dp"
        app:maxImageSize="48dp"
        app:elevation="0dp"
        android:src="@drawable/ic_plus"
        app:tint="@color/white"
        android:clickable="true"
        android:focusable="true"
        app:shapeAppearanceOverlay="@style/RoundedFloatingButton"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/empty_view"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:letterSpacing="0.02"
        android:textSize="14sp"
        android:text="@string/no_albums_message"
        android:textColor="@color/gray"
        />


</androidx.constraintlayout.widget.ConstraintLayout>